<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <TextView
        android:id="@+id/editText4"
        android:layout_width="366dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/bmi"
        android:textAlignment="gravity"
        android:textColor="#020202"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feet"
        android:layout_width="63dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/feet"
        android:textAlignment="gravity"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="@+id/pound"
        app:layout_constraintTop_toTopOf="@+id/editFeet" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_marginTop="120dp"
        android:text="@string/weight"
        android:textColor="#090909"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <TextView
        android:id="@+id/pound"
        android:layout_width="58dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/pound"
        android:textAlignment="gravity"
        android:textColor="#070707"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toEndOf="@+id/editWeight"
        app:layout_constraintTop_toTopOf="@+id/editWeight" />

    <TextView
        android:id="@+id/height"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:layout_marginTop="100dp"
        android:text="@string/height"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editWeight"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/editFeet"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editWeight"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <EditText
        android:id="@+id/editInch"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editFeet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFeet"
        app:layout_constraintTop_toBottomOf="@+id/editFeet" />

    <TextView
        android:id="@+id/inch"
        android:layout_width="64dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/inch"
        android:textAlignment="gravity"
        android:textColor="#070707"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/feet"
        app:layout_constraintTop_toTopOf="@+id/editInch" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="364dp"
        android:text="@string/calculate"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />


</androidx.constraintlayout.widget.ConstraintLayout>